--- a/guacamole.qmd
+++ b/guacamole.qmd
@@ -3,10 +3,11 @@
  - Coriander
  - Red onion
  - Lemon juice
+ - Lime juice
  - Salt
 
 ## Instructions
 1. Mash the avocado
 2. Finely chop the coriander and red onion
-3. Add salt and lemon juice to taste
+3. Add salt and lemon and lime juice to taste
 4. Enjoy!
